k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linsoft-demo-svc
  namespace: default
spec:
  selector:
    app: linsoft-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
